<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.privat.androiddev.privat.activity.MainActivity">

    <EditText
        android:id="@+id/etDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_date"
        android:inputType="date"
        android:onClick="onEditDateClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnGetRate"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectDate"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tvSelectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:text="@string/select_date"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="49dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/btnGetRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="Button"
        app:layout_constraintBaseline_toBaselineOf="@+id/etDate"
        app:layout_constraintLeft_toRightOf="@+id/etDate"
        tools:text="@string/get_rates"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="onGetRatesClick"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/exchangeRateRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDate" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="36dp"
        android:layout_height="22dp"
        android:text="@string/btn_clear"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClearClick"
        app:layout_constraintBottom_toTopOf="@+id/btnGetRate" />



</android.support.constraint.ConstraintLayout>
